fixed spacing

--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -310,7 +310,7 @@ section {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 20%;
+    height: 15%;
     ul {
       @include align-vertically(absolute);
       li {
